# oddevenchecker

./: README.md
odd_even_checker/: __init__.py  checker.py  pyproject.toml
odd_even_checker_viswas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
