[project]
name = "odd-even-checker-viswas"   # must be unique on PyPI
version = "0.0.1"
description = "A simple Python package to check if a number is odd or even."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

authors = [
  {name="Viswas B Kurian", email="your-email@example.com"}
]

[project.urls]
Homepage = "https://github.com/viswas-kurian/odd-even-checker"
